{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 28,
  "lineage": "e2ccca0c-8655-97e5-c542-9bf43ca4db56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:181636875901:instance/i-0a8aa9c9b92e9003b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globweb-dev-44773-ec2_profile",
            "id": "i-0a8aa9c9b92e9003b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-029f55c02efde55d7",
            "private_dns": "ip-10-0-0-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.96",
            "public_dns": "ec2-54-166-202-132.compute-1.amazonaws.com",
            "public_ip": "54.166.202.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07cd8dbf687878c05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce5c72de160f28cf",
            "tags": {
              "Name": "globweb-Dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globweb-Dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098a1ebef8750c1f2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.iam_role_allow_s3",
            "module.web_app_s3.aws_iam_role_policy.iam_role_policy_allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:181636875901:instance/i-0e55d0a54e8719d40",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globweb-dev-44773-ec2_profile",
            "id": "i-0e55d0a54e8719d40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d25b9372269a2e1d",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-44-198-169-110.compute-1.amazonaws.com",
            "public_ip": "44.198.169.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0952dc3dc07988a4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c5a6ff1ed3efe51",
            "tags": {
              "Name": "globweb-Dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globweb-Dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098a1ebef8750c1f2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.iam_role_allow_s3",
            "module.web_app_s3.aws_iam_role_policy.iam_role_policy_allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globweb-dev-44773",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:181636875901:loadbalancer/app/globweb-Dev-alb/6e2da199ea1af4b8",
            "arn_suffix": "app/globweb-Dev-alb/6e2da199ea1af4b8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globweb-Dev-alb-423279462.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:181636875901:loadbalancer/app/globweb-Dev-alb/6e2da199ea1af4b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globweb-Dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-072fcec139ffde7d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c5a6ff1ed3efe51"
              },
              {
                "subnet_id": "subnet-0ce5c72de160f28cf"
              }
            ],
            "subnets": [
              "subnet-02c5a6ff1ed3efe51",
              "subnet-0ce5c72de160f28cf"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0ebe27156e7e67280",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:181636875901:listener/app/globweb-Dev-alb/6e2da199ea1af4b8/6b052528bba98164",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:181636875901:targetgroup/globweb-Dev-web-tg/f09c7270e5f53254",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:181636875901:listener/app/globweb-Dev-alb/6e2da199ea1af4b8/6b052528bba98164",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:181636875901:loadbalancer/app/globweb-Dev-alb/6e2da199ea1af4b8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_lb_tg",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:181636875901:targetgroup/globweb-Dev-web-tg/f09c7270e5f53254",
            "arn_suffix": "targetgroup/globweb-Dev-web-tg/f09c7270e5f53254",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:181636875901:targetgroup/globweb-Dev-web-tg/f09c7270e5f53254",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "globweb-Dev-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ebe27156e7e67280"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx_tg_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:181636875901:targetgroup/globweb-Dev-web-tg/f09c7270e5f53254-20230118031541913600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:181636875901:targetgroup/globweb-Dev-web-tg/f09c7270e5f53254",
            "target_id": "i-0a8aa9c9b92e9003b"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx_lb_tg",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.iam_role_allow_s3",
            "module.web_app_s3.aws_iam_role_policy.iam_role_policy_allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:181636875901:targetgroup/globweb-Dev-web-tg/f09c7270e5f53254-20230118031541997000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:181636875901:targetgroup/globweb-Dev-web-tg/f09c7270e5f53254",
            "target_id": "i-0e55d0a54e8719d40"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx_lb_tg",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.iam_role_allow_s3",
            "module.web_app_s3.aws_iam_role_policy.iam_role_policy_allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:security-group/sg-072fcec139ffde7d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072fcec139ffde7d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globweb-Dev-alb-sg",
            "name_prefix": "",
            "owner_id": "181636875901",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe27156e7e67280"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:security-group/sg-098a1ebef8750c1f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098a1ebef8750c1f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globweb-Dev-sg",
            "name_prefix": "",
            "owner_id": "181636875901",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe27156e7e67280"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:internet-gateway/igw-01f0251cad38780cb",
            "id": "igw-01f0251cad38780cb",
            "owner_id": "181636875901",
            "tags": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0ebe27156e7e67280"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01f0251cad38780cb",
            "id": "r-rtb-06c9ae9315ce2245b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c9ae9315ce2245b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:route-table/rtb-06c9ae9315ce2245b",
            "id": "rtb-06c9ae9315ce2245b",
            "owner_id": "181636875901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f0251cad38780cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe27156e7e67280"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d5f10ba0b66ec2",
            "route_table_id": "rtb-06c9ae9315ce2245b",
            "subnet_id": "subnet-0ce5c72de160f28cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2d3fd5ee4cfcab8",
            "route_table_id": "rtb-06c9ae9315ce2245b",
            "subnet_id": "subnet-02c5a6ff1ed3efe51"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-0ce5c72de160f28cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5c72de160f28cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0ebe27156e7e67280"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:subnet/subnet-02c5a6ff1ed3efe51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c5a6ff1ed3efe51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "181636875901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0ebe27156e7e67280"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:181636875901:vpc/vpc-0ebe27156e7e67280",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d13e8ce9b582045",
            "default_route_table_id": "rtb-0aaafde9bc6d097c3",
            "default_security_group_id": "sg-0850724ad4472f8f0",
            "dhcp_options_id": "dopt-08c04d0b26e677d44",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebe27156e7e67280",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aaafde9bc6d097c3",
            "owner_id": "181636875901",
            "tags": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "Name": "globweb-Dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "Dev",
              "project": "Globomantics-web-app"
            }
          }
        }
      ]
    }
  ]
}